[project]
name = "mynbWall"
version = "0.1.0"
description = "mynbWall"
readme = "README.md"
requires-python = ">=3.9, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_waiter"]
plugin_dirs = ["mynbwall/plugins"]
builtin_plugins = ["echo"]
